[metadata]
name = abics
version = 1.0.0
description = ab-Initio Configuration Sampling tool kit
url = https://github.com/issp-center-dev/abICS
license = GPLv3
author = ABICS developers
author_email = abics-dev@issp.u-tokyo.ac.jp

[options]
packages = find:
zip_safe = False
python_requires= >=3.6.0
install_requires =
    numpy
    scipy
    toml
    mpi4py
    pymatgen
    qe_tools
test_suite = test

[options.entry_points]
console_scripts = 
    abics = abics.scripts.main:main
    st2abics = abics.scripts.st2abics_config:main
    abicsRXsepT = abics.scripts.abicsRXsepT:main
[options.package_data]
* = input_template.toml
